# parkrun

./: .gitignore  README.md  credentials.toml  docker-compose.yaml  email_new_events.py  filter_uk_events.py  injest_filter_mail.py  injest_json.py  main.py  parse_json.py  pyproject.toml  requirements.txt  utils.py
