[tool.poetry]
name = "parkrun"
version = "0.1.0"
description = ""
authors = ["jmoro0408 <james.moro.11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
jupyter = "^1.0.0"
requests = "^2.28.2"
tomli = "^2.0.1"
matplotlib = "^3.7.1"
plotly = "^5.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
